Fix footer links align

--- a/style.css
+++ b/style.css
@@ -249,7 +249,8 @@ header {
         .section__victime-info-texte {
             color: white;
             font-family: 'Montserrat', sans-serif;
-            font-size: 1.1rem;
+            font-size: 1rem;
+            line-height: 1.3;
             font-weight: 400;
             text-align: left;
         }
@@ -509,15 +510,18 @@ footer {
     text-align: right;
 }
 
-.footer__list-component a {
+.footer__list-component button {
     color: white;
     list-style: none;
     font-size: 2rem;
     transition: all 0.5s ease-in-out;
     text-decoration: none;
+    border: none;
+    background-color: transparent;
+    font-family: 'Bebas', sans-serif;
 }
 
-.footer__list-component a:hover {
+.footer__list-component button:hover {
     color: #AF94E0;
     cursor: pointer;
 }
@@ -529,6 +533,7 @@ footer {
 
 .footer__container-credit {
     padding-right: 100px;
+    margin-left: auto;
 }
 
 .footer__title {
@@ -566,32 +571,3 @@ footer {
     color: #AF94E0;
     cursor: pointer;
 }
-
-/* Code des pop up pour les mentions légales */
-
-/* .footer__container-modal {
-        visibility: hidden;
->>>>>>> 2810b41924e6acb6f5e6256870764e6f7e302d13
-        position: absolute;
-        background-color: #ebe7f0;
-        top: 0px;
-        bottom: 0px;
-        right: 0px;
-        left: 0px;
-        border-radius: 25px;
-        width: 1250px;
-        height: 250px;
-        z-index: 1;
-    }
-
-    .footer__container-modal:target {
-        visibility: visible;
-    }
-
-    .footer__container-textmodal {
-        border: solid 1px black;
-        background-color: red   ;
-        width: 1220px;
-        height: 220px;
-        z-index: 10;
-    }
